# MultiModal-Deepfake-Detection-with-Explainable-AI

./: .dockerignore  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  PROJECT_WORKFLOW.md  README.md  compose.gpu.yaml  compose.yaml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: tests.yml
Rule_Based_Fusion_Module/: .gitignore  README.md  pyproject.toml
Rule_Based_Fusion_Module/config/: default_rules.json  gradcam3d_inference.json  inference.example.json
Rule_Based_Fusion_Module/examples/: 00181_input.json  input_template.json
Rule_Based_Fusion_Module/output/: 00181_fused.json
Rule_Based_Fusion_Module/schemas/: detector_report.schema.json  rule_based_fusion_result.schema.json
Rule_Based_Fusion_Module/src/rule_based_fusion/: __init__.py  cli.py  config.py  engine.py  io.py  models.py  pipeline.py
Rule_Based_Fusion_Module/tests/: test_fusion.py
analysis/: __init__.py  analyze_video.py
cnn/: __init__.py  generate_weak_labels.py  gradcam.py  headwise_gradcam.py  inference.py  model.py  shap_explain.py  train.py  utils.py  video_dataset.py
cnn/configs/: config.py
cnn/datasets/: video_dataset.py
cnn/engine/: trainer.py
cnn/explainability/: __init__.py  gradcam.py  head_analysis.py  shap_utils.py  visualization.py
cnn/models/: cnn3d.py
data_tools/: prepare_dataset.py  split_fakeavceleb.py
random_forest/: README.md  __init__.py  extract_features.py  predict_video.py  preprocess.py  split_dataset.py  train.py
transcript/: README.md  infer.py  requirements.txt
(+54 files in other folders)
